deploy/kubes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: item-tracker
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: track.home.fa.gl
      http:
        paths:
          - backend:
              service:
                name: item-tracker-api
                port:
                  number: 4000
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: item-tracker-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
